--- a/src/styles/Pages.css
+++ b/src/styles/Pages.css
@@ -17,9 +17,9 @@ h1{
     text-align: center;
     text-decoration: aqua;
 }
-   body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+   
     header { background-color: #0377eb; color: white; padding: 1px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; }
+    nav a { color: white; margin: 0 15px; text-decoration: Vivekanand college; }
     .apply-button { background-color: green; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; }
     .hero { padding: 40px; text-align: center; background-color: #f0f8ff; }
     .footer { background-color: #222; color: #aaa; padding: 10px; text-align: center; }
@@ -34,14 +34,17 @@ h1{
     background-color:aqua;
     margin-right: 0;
     margin-bottom: 0;
+    
 }
 
 .inner-body {
-    height: 500px;
+    height: 450px;
     width: 70%;
     margin: 8% 15% 8%;
     background-color:white;
     border-radius: 5px;
     overflow-y: auto;
     color: black;
+    padding: 10px;
+   
 }
